--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Local Configuration
+blocks.h
+
+# Dependencies
+buffer
+
 # Prerequisites
 *.d
 
@@ -36,9 +42,6 @@
 *.x86_64
 *.hex
 dwmblocks
-
-# Local Configuration
-blocks.h
 
 # Debug files
 *.dSYM/
