Update configuration method

--- a/makefiles/Makefile.freebsd
+++ b/makefiles/Makefile.freebsd
@@ -3,6 +3,8 @@ CC      := cc
 CFLAGS  := -pedantic -Wall -Wno-deprecated-declarations -Os
 LDFLAGS := -lX11
 
+LDFLAGS += -L/usr/local/lib -I/usr/local/include
+
 all: options dwmblocks
 
 options:
